--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -1,8 +1,8 @@
 \section{Introduction}
 
-Phylogrowth is a program that calculates population growth
-from a phylogenetic tree by counting subclades and samples
-for given periods of time.
+Phylogrowth is a program that calculates the expansion of
+a haplogroup by counting subclades and samples for given
+periods of time.
 
 Periods of human growth and prosperity are often accompanied
 by strong population growth. For a society strong population
@@ -14,17 +14,21 @@ strong population growth and good times.
 
 Population growth usually continues until resources get scarce
 or the society is threatened by epidemics, natural disasters or
-war. It should be possible to detect those times by looking at
-the population growth.
+war. In such cases we expect that the main haplogroups of a
+population would stop to grow or at least grow slower.
 
-Luckily we all carry important archeological evidence within us.
-It is encoded in our genetic markers. Modern technologies like
-next generation sequencing have made it possible to create highly
-accurate phylogenetic trees.
+Given highly accurate phylogenetic trees with good time estimates
+it should be possible to detect different periods of human history
+and derive valuable conclusions.
 
-Phylogrowth can utilize those trees and give us insights into
+Modern technologies like next generation sequencing have made
+it possible to create such phylogenetic trees and to utilize
+the important archeological evidence we all carry within our
+DNA.
+
+Phylogrowth uses phylogenetic trees to compute changes in
+haplogroup growth. This should give us more insights into
 our history.
-
 
 \vspace{1em}\noindent
 Have fun exploring human history!
