--- a/doc/theory.tex
+++ b/doc/theory.tex
@@ -133,39 +133,10 @@ $c_t$ of the population has tested.
 Furthermore the probability to detect a certain lineage depends
 on it's age. If we characterize a specific historic lineage by
 it's SNP mutation we will find this mutation whenever a person
-belonging to the SNP subclade has tested. Thus the probability
-to detect a certain SNP scales with the number of persons
-carrying it. For simplicity we assume that all subclades grow
-equally with population growth.
-
-If the fraction $c_t$ of the population that has tested is
-very small, we will miss most of the younger lineages. The
-older ones however will be amplified by the number of their
-sublineages and thus population growth.
-In this case we may write:
-
-\begin{eqnarray}
-d(t) & \approx & c_t \frac{P(t_0)}{P(t)} g(t)\\
-     & \approx & c_t \frac{P(t_0)}{P(t)} c_l a b(t) \\
-     & \approx & c_t \frac{P(t_0)}{P(t)} c_l a \left( \frac{dP(t)}{dt} + c_{d} P(t) \right)
-\end{eqnarray}
-
-\begin{tabular}{ll}
-$d$:     & detected number of new lineages between $t-\frac{a}{2}$ and $t+\frac{a}{2}$\\
-$c_t$:   & fraction of the population that has tested.\\
-$P$:     & population size\\
-$t$:     & time\\
-$t_0$:   & time of testing\\
-$g$:     & growth of phylogenetic lineages between $t-\frac{a}{2}$ and $t+\frac{a}{2}$\\
-$b$:     & number of births per second\\
-$a$:     & time interval or step length used for counting\\
-$c_l$:   & fraction of births that develops into long time lineages\\
-$c_{d}$: & fraction of the population size that dies per second
-\end{tabular}
-\vspace{1em}
-
-
-
+belonging to the SNP haplogroup has been tested. The probability
+to detect a certain SNP scales with the number of persons carrying
+it. For this reason it is much more likely to detect an older
+haplogroup than a younger subclade. 
 
 
 
