--- a/doc/phylogrowth.tex
+++ b/doc/phylogrowth.tex
@@ -29,6 +29,7 @@
 \include{options}
 \include{examples}
 \include{theory}
+\include{appendix}
 \input{references}
 \bibliography{references}
 \addcontentsline{toc}{section}{References}
